# Rust_demo

./: Cargo.toml  README.md
Rust_Slint/: Cargo.toml
Rust_Slint/src/: main.rs  main.slint
Rust_Slint/src/logic/: get_result.rs  sql.rs
Rust_Slint/src/ui/pages/: bottom.slint  datetime.slint  dialog.slint  query.slint  sn_view.slint  tip.slint
Rust_Slint/ui/: main.slint
Rust_Slint/ui/pages/: bottom.slint  sn_view.slint
SurrealismUI-main/: index.slint  surrealism-ui.toml
SurrealismUI-main/src/loading/: index.slint  loading.slint
SurrealismUI-main/src/tip/: tip.slint
src/: main.rs  main.slint  sql.rs  util.rs
src/logic/: datetime.rs  get_result.rs  mod.rs  sql.rs  util.rs
src/ui/: side_bar.slint
src/ui/pages/: datetime.slint  dialog.slint  query.slint  sn_view.slint
