[package]
name = "tool_slint"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
path = "src/main.rs"
name = "slint"

[dependencies]
slint = "1.1.1"
tiberius={version="0.11.3",features = ["chrono"]}
tokio = { version = "1.22", features = ["full"] }
tokio-util = { version = "0.7.4", features=["compat"]}
chrono =  "0.4"
[build-dependencies]
slint-build = "1.0"
